--- a/cdk/dotnet/src/Dotnet/Dotnet.csproj
+++ b/cdk/dotnet/src/Dotnet/Dotnet.csproj
@@ -1,19 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <!-- Roll forward to future major versions of the netcoreapp as needed -->
     <RollForward>Major</RollForward>
   </PropertyGroup>
-
   <ItemGroup>
-    <!-- CDK Construct Library dependencies -->
-    <PackageReference Include="Amazon.CDK" Version="1.64.1" />
-
-    <!-- jsii Roslyn analyzers (un-comment to obtain compile-time checks for missing required props
-    <PackageReference Include="Amazon.Jsii.Analyzers" Version="*" PrivateAssets="all" />
-    -->
+    <PackageReference Include="Amazon.CDK" Version="1.64.1"/>
+    <PackageReference Include="Amazon.CDK.AWS.S3" Version="1.64.1"/>
+    <PackageReference Include="Amazon.JSII.Analyzers" Version="1.13.0"/>
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.7.0"/>
   </ItemGroup>
-
 </Project>
