--- a/cdk/ts/package.json
+++ b/cdk/ts/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@aws-cdk/aws-ec2": "^1.66.0",
     "@aws-cdk/core": "1.66.0",
+    "sam-cli": "^1.0.0",
     "source-map-support": "^0.5.16"
   }
 }
