--- a/cdk/ts/package.json
+++ b/cdk/ts/package.json
@@ -2,7 +2,7 @@
   "name": "ts",
   "version": "0.1.0",
   "bin": {
-    "ts": "bin/ts.js"
+    "ts": "build/lib/app.js"
   },
   "scripts": {
     "build": "tsc",
@@ -22,6 +22,9 @@
   },
   "dependencies": {
     "@aws-cdk/aws-ec2": "^1.66.0",
+    "@aws-cdk/aws-s3": "^1.66.0",
+    "@aws-cdk/aws-sqs": "^1.66.0",
+    "@aws-cdk/aws-lambda": "^1.66.0",
     "@aws-cdk/aws-stepfunctions": "^1.66.0",
     "@aws-cdk/aws-stepfunctions-tasks": "^1.66.0",
     "@aws-cdk/core": "1.66.0",
