--- a/cdk/ts/package.json
+++ b/cdk/ts/package.json
@@ -21,10 +21,12 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-autoscaling": "^1.66.0",
     "@aws-cdk/aws-ec2": "^1.66.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^1.66.0",
+    "@aws-cdk/aws-lambda": "^1.66.0",
     "@aws-cdk/aws-s3": "^1.66.0",
     "@aws-cdk/aws-sqs": "^1.66.0",
-    "@aws-cdk/aws-lambda": "^1.66.0",
     "@aws-cdk/aws-stepfunctions": "^1.66.0",
     "@aws-cdk/aws-stepfunctions-tasks": "^1.66.0",
     "@aws-cdk/core": "1.66.0",
