--- a/cdk/ts/package.json
+++ b/cdk/ts/package.json
@@ -30,6 +30,10 @@
     "@aws-cdk/aws-sqs": "^1.69.0",
     "@aws-cdk/aws-stepfunctions": "^1.69.0",
     "@aws-cdk/aws-stepfunctions-tasks": "^1.69.0",
+    "@aws-cdk/aws-codepipeline": "^1.69.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.69.0",
+    "@aws-cdk/aws-codebuild": "^1.69.0",
+    "@aws-cdk/aws-codecommit": "^1.69.0",
     "@aws-cdk/core": "^1.69.0",
     "sam-cli": "^1.0.0",
     "source-map-support": "^0.5.16"
