--- a/cdk/ts/package.json
+++ b/cdk/ts/package.json
@@ -22,6 +22,10 @@
   },
   "dependencies": {
     "@aws-cdk/aws-autoscaling": "^1.69.0",
+    "@aws-cdk/aws-codebuild": "^1.69.0",
+    "@aws-cdk/aws-codecommit": "^1.69.0",
+    "@aws-cdk/aws-codepipeline": "^1.69.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.69.0",
     "@aws-cdk/aws-ec2": "^1.69.0",
     "@aws-cdk/aws-elasticbeanstalk": "^1.69.0",
     "@aws-cdk/aws-elasticloadbalancingv2": "^1.69.0",
@@ -30,11 +34,8 @@
     "@aws-cdk/aws-sqs": "^1.69.0",
     "@aws-cdk/aws-stepfunctions": "^1.69.0",
     "@aws-cdk/aws-stepfunctions-tasks": "^1.69.0",
-    "@aws-cdk/aws-codepipeline": "^1.69.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.69.0",
-    "@aws-cdk/aws-codebuild": "^1.69.0",
-    "@aws-cdk/aws-codecommit": "^1.69.0",
     "@aws-cdk/core": "^1.69.0",
+    "aws-sdk": "^2.779.0",
     "sam-cli": "^1.0.0",
     "source-map-support": "^0.5.16"
   }
