--- a/cdk/ts/package.json
+++ b/cdk/ts/package.json
@@ -30,6 +30,7 @@
     "@aws-cdk/aws-elasticbeanstalk": "^1.69.0",
     "@aws-cdk/aws-elasticloadbalancingv2": "^1.69.0",
     "@aws-cdk/aws-lambda": "^1.69.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.69.0",
     "@aws-cdk/aws-s3": "^1.69.0",
     "@aws-cdk/aws-sqs": "^1.69.0",
     "@aws-cdk/aws-stepfunctions": "^1.69.0",
