--- a/cdk/ts/package.json
+++ b/cdk/ts/package.json
@@ -36,9 +36,9 @@
     "@aws-cdk/aws-stepfunctions": "^1.69.0",
     "@aws-cdk/aws-stepfunctions-tasks": "^1.69.0",
     "@aws-cdk/core": "^1.69.0",
-    "aws-sdk": "^2.779.0",
+    "@types/uuid": "^8.3.0",
+    "aws-sdk": "^2.781.0",
     "sam-cli": "^1.0.0",
-    "source-map-support": "^0.5.16",
-    "@types/uuid": "^8.3.0"
+    "source-map-support": "^0.5.16"
   }
 }
