--- a/cdk/ts/package.json
+++ b/cdk/ts/package.json
@@ -36,6 +36,7 @@
     "@aws-cdk/aws-stepfunctions": "^1.69.0",
     "@aws-cdk/aws-stepfunctions-tasks": "^1.69.0",
     "@aws-cdk/core": "^1.69.0",
+    "@aws-cdk/cloudformation-include": "^1.69.0",
     "@types/uuid": "^8.3.0",
     "aws-sdk": "^2.781.0",
     "sam-cli": "^1.0.0",
