--- a/cdk/ts/package.json
+++ b/cdk/ts/package.json
@@ -11,34 +11,35 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.69.0",
+    "@aws-cdk/assert": "^1.71.0",
     "@types/jest": "^26.0.15",
     "@types/node": "10.17.27",
-    "aws-cdk": "^1.69.0",
+    "aws-cdk": "^1.71.0",
     "jest": "^26.6.0",
-    "ts-jest": "^26.2.0",
+    "ts-jest": "^26.4.3",
     "ts-node": "^8.1.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-autoscaling": "^1.69.0",
-    "@aws-cdk/aws-codebuild": "^1.69.0",
-    "@aws-cdk/aws-codecommit": "^1.69.0",
-    "@aws-cdk/aws-codepipeline": "^1.69.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.69.0",
-    "@aws-cdk/aws-ec2": "^1.69.0",
-    "@aws-cdk/aws-elasticbeanstalk": "^1.69.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "^1.69.0",
-    "@aws-cdk/aws-lambda": "^1.69.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.69.0",
-    "@aws-cdk/aws-s3": "^1.69.0",
-    "@aws-cdk/aws-sqs": "^1.69.0",
-    "@aws-cdk/aws-stepfunctions": "^1.69.0",
-    "@aws-cdk/aws-stepfunctions-tasks": "^1.69.0",
-    "@aws-cdk/core": "^1.69.0",
-    "@aws-cdk/cloudformation-include": "^1.69.0",
+    "@aws-cdk/aws-autoscaling": "^1.71.0",
+    "@aws-cdk/aws-codebuild": "^1.71.0",
+    "@aws-cdk/aws-codecommit": "^1.71.0",
+    "@aws-cdk/aws-codepipeline": "^1.71.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.71.0",
+    "@aws-cdk/aws-ec2": "^1.71.0",
+    "@aws-cdk/aws-elasticbeanstalk": "^1.71.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^1.71.0",
+    "@aws-cdk/aws-lambda": "^1.71.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.71.0",
+    "@aws-cdk/aws-rds": "^1.71.0",
+    "@aws-cdk/aws-s3": "^1.71.0",
+    "@aws-cdk/aws-sqs": "^1.71.0",
+    "@aws-cdk/aws-stepfunctions": "^1.71.0",
+    "@aws-cdk/aws-stepfunctions-tasks": "^1.71.0",
+    "@aws-cdk/cloudformation-include": "^1.71.0",
+    "@aws-cdk/core": "^1.71.0",
     "@types/uuid": "^8.3.0",
-    "aws-sdk": "^2.781.0",
+    "aws-sdk": "^2.783.0",
     "sam-cli": "^1.0.0",
     "source-map-support": "^0.5.16"
   }
