--- a/cdk/ts/package.json
+++ b/cdk/ts/package.json
@@ -39,6 +39,7 @@
     "@aws-cdk/aws-stepfunctions": "^1.71.0",
     "@aws-cdk/aws-stepfunctions-tasks": "^1.71.0",
     "@aws-cdk/cloudformation-include": "^1.71.0",
+    "@aws-cdk/aws-logs": "^1.71.0",
     "@aws-cdk/core": "^1.71.0",
     "@types/uuid": "^8.3.0",
     "aws-sdk": "^2.783.0",
