--- a/cdk/dotnet/assets/SimpleFunctionHandler/SimpleFunctionHandler.csproj
+++ b/cdk/dotnet/assets/SimpleFunctionHandler/SimpleFunctionHandler.csproj
@@ -5,11 +5,11 @@
     <RollForward>Major</RollForward>    
   </PropertyGroup>-->
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     <AWSProjectType>Lambda</AWSProjectType>
   </PropertyGroup>
-  <ItemGroup>
-
+  <ItemGroup>    
+    <PackageReference Include="Amazon.Lambda.Core" Version="2.1.0"/>
   </ItemGroup>
 </Project>
