--- a/cdk/ts/package.json
+++ b/cdk/ts/package.json
@@ -11,39 +11,41 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.71.0",
-    "@types/jest": "^26.0.15",
-    "@types/node": "10.17.27",
-    "aws-cdk": "^1.71.0",
-    "jest": "^26.6.0",
-    "ts-jest": "^26.4.3",
-    "ts-node": "^8.1.0",
-    "typescript": "~3.9.7"
+    "@aws-cdk/assert": "^1.194.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.2",
+    "aws-cdk": "^1.194.0",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@aws-cdk/aws-autoscaling": "^1.71.0",
-    "@aws-cdk/aws-codebuild": "^1.71.0",
-    "@aws-cdk/aws-codecommit": "^1.71.0",
-    "@aws-cdk/aws-codepipeline": "^1.71.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.71.0",
-    "@aws-cdk/aws-ec2": "^1.71.0",
-    "@aws-cdk/aws-elasticbeanstalk": "^1.71.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "^1.71.0",
-    "@aws-cdk/aws-lambda": "^1.71.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.71.0",
-    "@aws-cdk/aws-rds": "^1.71.0",
-    "@aws-cdk/aws-s3": "^1.71.0",
-    "@aws-cdk/aws-sqs": "^1.71.0",
-    "@aws-cdk/aws-ssm": "^1.71.0",
-    "@aws-cdk/aws-secretsmanager": "^1.71.0",
-    "@aws-cdk/aws-stepfunctions": "^1.71.0",
-    "@aws-cdk/aws-stepfunctions-tasks": "^1.71.0",
-    "@aws-cdk/cloudformation-include": "^1.71.0",
-    "@aws-cdk/aws-logs": "^1.71.0",
-    "@aws-cdk/core": "^1.71.0",
-    "@types/uuid": "^8.3.0",
-    "aws-sdk": "^2.783.0",
-    "sam-cli": "^1.0.0",
+    "@aws-cdk/aws-autoscaling": "^1.194.0",
+    "@aws-cdk/aws-codebuild": "^1.194.0",
+    "@aws-cdk/aws-codecommit": "^1.194.0",
+    "@aws-cdk/aws-codepipeline": "^1.194.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.194.0",
+    "@aws-cdk/aws-ec2": "^1.194.0",
+    "@aws-cdk/aws-elasticbeanstalk": "^1.194.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^1.194.0",
+    "@aws-cdk/aws-lambda": "^1.194.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.194.0",
+    "@aws-cdk/aws-s3-deployment": "^1.194.0",
+    "@aws-cdk/aws-s3-notifications": "^1.194.0",
+    "@aws-cdk/aws-cloudfront-origins": "^1.194.0",
+    "@aws-cdk/aws-rds": "^1.194.0",
+    "@aws-cdk/aws-s3": "^1.194.0",
+    "@aws-cdk/aws-sqs": "^1.194.0",
+    "@aws-cdk/aws-ssm": "^1.194.0",
+    "@aws-cdk/aws-secretsmanager": "^1.194.0",
+    "@aws-cdk/aws-stepfunctions": "^1.194.0",
+    "@aws-cdk/aws-stepfunctions-tasks": "^1.194.0",
+    "@aws-cdk/cloudformation-include": "^1.194.0",
+    "@aws-cdk/aws-logs": "^1.194.0",
+    "@aws-cdk/core": "^1.194.0",
+    "@types/uuid": "^9.0.1",
+    "aws-sdk": "^2.1325.0",
     "source-map-support": "^0.5.16"
   }
 }
